--- a/static/css/dispatch/schedule.css
+++ b/static/css/dispatch/schedule.css
@@ -64,7 +64,7 @@
     border-spacing: 0;
 }
 
-.scheduleTableHeader td:nth-child(1) {
+.scheduleTableHeader td:nth-child(15) {
     text-align: left;
     width: 3.5%;
 }
@@ -82,11 +82,11 @@
     width: 3.48%;
 }
 
-.scheduleTableHeader td:nth-child(14) {
+.scheduleTableHeader td:nth-child(2) {
     width: 8%;
 }
 
-.scheduleTableHeader td:nth-child(15) {
+.scheduleTableHeader td:nth-child(1) {
     width: 8.48%;
 }
 
@@ -108,7 +108,7 @@
 .scheduleTableCell::-webkit-scrollbar-thumb {
     height: 17%;
     background-color: #444444;
-    border-radius: 10px;
+    border-radius: 1rem;
 }
 
 .scheduleTableCell::-webkit-scrollbar-track {
@@ -180,6 +180,7 @@
     height: 100%;
     border-right: none;
     border-bottom: 0.1rem solid #CDCDCE;
+    border-right: 0.1rem solid #CDCDCE;
     font-size: 1.4rem;
     color: #7A7A7A;
     cursor: pointer;
@@ -215,6 +216,22 @@
     height: 62rem;
 }
 
+.popupContainer {
+    position: fixed;
+    top: 50%;
+    left: calc(50% + 11rem);
+    z-index: 100;
+    display: block;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 64rem;
+    min-height: 19.6rem;
+    background-color: white;
+    box-shadow: 0 0.2rem 0.4rem rgb(0 0 0 / 16%);
+    transform: translate(-50%, -50%);
+}
+
 .PopupTitle {
     display: flex;
     justify-content: center;
@@ -231,7 +248,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    height: calc(100% - 9.7rem);
+    height: calc(100% - 10.8rem);
     padding: 4.2rem 3rem 3rem 3rem;
     box-sizing: border-box;
 }
@@ -244,11 +261,11 @@
 }
 
 .PopupDataCell {
-    display: flex;
+        display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-start;
-    width: 23rem;
+    width: 12rem;
     height: 6rem;
 }
 
@@ -296,7 +313,7 @@
 .shcedulePopupTableBodyBox::-webkit-scrollbar-thumb {
     height: 17%;
     background-color: #444444;
-    border-radius: 10px;
+    border-radius: 1rem;
 }
 
 .shcedulePopupTableBodyBox::-webkit-scrollbar-track {
@@ -352,15 +369,18 @@
     width: 37%;
 }
 
+.popupTable td:nth-child(8),
+.popupTable td:nth-child(6),
+.popupTable td:nth-child(7){
+    width: 9%;
+}
+
 .popupTable td:nth-child(5) {
     width: 8%;
 }
 
-.popupTable td:nth-child(6),
-.popupTable td:nth-child(7),
-.popupTable td:nth-child(8) {
-    width: 9%;
-}
+
+
 
 .PopupBtnBox {
     display: flex;
@@ -369,7 +389,7 @@
     width: 100%;
     height: 4.8rem;
     box-sizing: border-box;
-    padding: 0px 30px;
+    padding: 0 3rem;
 }
 
 .PopupunderBtnBox{
@@ -377,9 +397,8 @@
     justify-content: right;
     align-items: center;
     width: 100%;
-    height: 4.8rem;
     box-sizing: border-box;
-    padding: 4.2rem 3rem 3rem 3rem; 
+    padding: 3rem 3rem;
     gap: 1rem;
 }
 
@@ -440,15 +459,20 @@
 }
 
 .popupTable2 td:nth-child(1){
-    width: 10%;
+    width: 5%;
 }
 .popupTable2 td:nth-child(2){
-    width: 40%;
+    width: 20%;
 }
 .popupTable2 td:nth-child(3),
-.popupTable2 td:nth-child(4){
-    width: 25%;
+.popupTable2 td:nth-child(4),
+.popupTable2 td:nth-child(5),
+.popupTable2 td:nth-child(6),
+.popupTable2 td:nth-child(7){
+    width: 15%;
 }
+
+
 
 .shcedulePopupTableHeader2{
     width: 100%;
@@ -501,10 +525,10 @@
 
 
 .completionRate {
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: bold;
     color: #4caf50;
-    margin-top: 10px;
+    margin-top: 1rem;
 }
 
 .PopupDataArea {
@@ -513,12 +537,12 @@
 }
 
 .progress-bar {
-    width: 100%;
+        width: 100%;
     background-color: #e0e0e0;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     overflow: hidden;
-    height: 20px;
-    margin: 2rem 0;
+    height: 2rem;
+    margin: 1rem 0;
     font-size: 1.3rem;
 }
 
@@ -527,7 +551,16 @@
   text-align: center;
   color: white;
   font-weight: bold;
-  line-height: 20px; /* Match the height for vertical centering */
-  border-radius: 5px;
+  line-height: 2rem; /* Match the height for vertical centering */
+  border-radius: 0.5rem;
   transition: width 0.3s ease;
+}
+
+.notDone{
+    color: #ff0000
+}
+
+.check {
+    text-decoration: none;
+    color: #0069D9;
 }
