--- a/templates/base.html
+++ b/templates/base.html
@@ -313,8 +313,8 @@
                   <a href="#" class="sideMenuNav2Link">점호관리</a>
                   <ul class="submenu">
                     <li>
-                      <a href="" class="sideMenuNav3Link">
-                        <div class="sideMenuNav3Menu">점호관리?</div>
+                      <a href="{% url 'dispatch:roll_call' %}" class="sideMenuNav3Link">
+                        <div class="sideMenuNav3Menu">점호관리</div>
                       </a>
                     </li>
                     <li>
