--- a/static/css/dispatch/schedule.css
+++ b/static/css/dispatch/schedule.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 32rem;
+    width: 29rem;
     height: 100%;
     margin-left: 2rem;
     margin-right: 4rem;
@@ -64,7 +64,7 @@
     border-spacing: 0;
 }
 
-.scheduleTableHeader td:nth-child(1) {
+.scheduleTableHeader td:nth-child(3) {
     text-align: left;
     width: 3.5%;
 }
@@ -77,16 +77,16 @@
     color: #7A7A7A;
 }
 
-.scheduleTableHeader td:nth-child(13) {
+.scheduleTableHeader td:nth-child(15) {
     text-align: right;
     width: 3.48%;
 }
 
-.scheduleTableHeader td:nth-child(14) {
+.scheduleTableHeader td:nth-child(2) {
     width: 8%;
 }
 
-.scheduleTableHeader td:nth-child(15) {
+.scheduleTableHeader td:nth-child(1) {
     width: 8.48%;
 }
 
@@ -108,7 +108,7 @@
 .scheduleTableCell::-webkit-scrollbar-thumb {
     height: 17%;
     background-color: #444444;
-    border-radius: 10px;
+    border-radius: 1rem;
 }
 
 .scheduleTableCell::-webkit-scrollbar-track {
@@ -180,6 +180,7 @@
     height: 100%;
     border-right: none;
     border-bottom: 0.1rem solid #CDCDCE;
+    border-right: 0.1rem solid #CDCDCE;
     font-size: 1.4rem;
     color: #7A7A7A;
     cursor: pointer;
@@ -210,10 +211,25 @@
 
 
 
+
 .popupContainer {
+    position: fixed;
+    top: 50%;
+    left: calc(50% + 11rem);
+    z-index: 100;
+    display: block;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100rem;
+    min-height: 19.6rem;
+    background-color: white;
+    box-shadow: 0 0.2rem 0.4rem rgb(0 0 0 / 16%);
+    transform: translate(-50%, -50%);
     width: 100rem;
     height: 62rem;
 }
+
 
 .PopupTitle {
     display: flex;
@@ -226,6 +242,13 @@
     border-bottom: 0.1rem solid #191919;
 }
 
+/* .PopupDataArea {
+    width: 100%;
+    height: calc(100% - 10.8rem);
+    padding: 0 2rem;
+    box-sizing: border-box;
+    padding-top: 3rem;
+} */
 .PopupDataArea {
     display: flex;
     flex-direction: column;
@@ -246,9 +269,9 @@
 .PopupDataCell {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-start;
-    width: 23rem;
+    width: 21rem;
     height: 6rem;
 }
 
@@ -284,7 +307,6 @@
     width: 100%;
     height: calc(100% - 3.6rem);
     border: 0.1rem solid #CDCDCE;
-    border-radius: 0 0 0.5rem 0.5rem;
     overflow-y: scroll;
     box-sizing: border-box;
 }
@@ -296,7 +318,7 @@
 .shcedulePopupTableBodyBox::-webkit-scrollbar-thumb {
     height: 17%;
     background-color: #444444;
-    border-radius: 10px;
+    border-radius: 1rem;
 }
 
 .shcedulePopupTableBodyBox::-webkit-scrollbar-track {
@@ -352,27 +374,40 @@
     width: 37%;
 }
 
+.popupTable td:nth-child(8),
+.popupTable td:nth-child(6),
+.popupTable td:nth-child(7){
+    width: 9%;
+}
+
 .popupTable td:nth-child(5) {
     width: 8%;
 }
 
-.popupTable td:nth-child(6),
-.popupTable td:nth-child(7),
-.popupTable td:nth-child(8) {
-    width: 9%;
-}
+
+
 
 .PopupBtnBox {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     width: 100%;
     height: 4.8rem;
     box-sizing: border-box;
+    padding: 0 3rem;
 }
 
-.PopupBtnBox div {
-    background-color: #444444;
+.PopupunderBtnBox{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+    height: 7.2rem;
+}
+
+.btnModules{
+    background-color: #0069D9;
 }
 
 .timeline {
@@ -382,4 +417,159 @@
     width: 0.1rem;
     height: calc(100% - 4.6rem);
     border-left: 0.5rem solid #1C1A4E;
+}
+
+.btncloseModules{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 6rem;
+    height: 2.5rem;
+    padding: 0 1.2rem;
+    border: none;
+    border-radius: 0.2rem;
+    font-size: 1.4rem;
+    color: white;
+    cursor: pointer;
+    box-sizing: border-box;
+    outline: none;
+    background-color: #444444;
+}
+
+.btnsaveModules{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 6rem;
+    height: 2.5rem;
+    padding: 0 1.2rem;
+    border: none;
+    border-radius: 0.2rem;
+    font-size: 1.4rem;
+    color: white;
+    cursor: pointer;
+    box-sizing: border-box;
+    outline: none;
+    background-color: #0069D9;
+}
+
+.popupAreaModules2{
+    display: none;
+}
+
+.popupTable2 td{
+    border-bottom: 0.1rem solid #CDCDCE;
+    height: 3.6rem;
+}
+
+.popupTable2 td:nth-child(1){
+    width: 5%;
+}
+.popupTable2 td:nth-child(2){
+    width: 20%;
+}
+.popupTable2 td:nth-child(3),
+.popupTable2 td:nth-child(4),
+.popupTable2 td:nth-child(5),
+.popupTable2 td:nth-child(6),
+.popupTable2 td:nth-child(7){
+    width: 15%;
+}
+
+
+
+.shcedulePopupTableHeader2{
+    width: 100%;
+    height: 3.6rem;
+    border-radius: 0.5rem 0.5rem 0 0;
+    box-sizing: border-box;
+    font-size: 1.4rem;
+    background-color: #444444;
+    color: white;
+    border-spacing: 0;
+    text-align: center;
+}
+
+.shcedulePopupTableBody2{
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 1.4rem;
+    border-spacing: 0;
+    text-align: center;
+}
+
+.PopupBtnBox2 {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    width: 100%;
+    height: 4.8rem;
+    box-sizing: border-box;
+}
+
+.editbtnModules{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 6rem;
+    height: 2.5rem;
+    padding: 0 1.2rem;
+    border: none;
+    border-radius: 0.2rem;
+    font-size: 1.4rem;
+    color: white;
+    cursor: pointer;
+    box-sizing: border-box;
+    outline: none;
+    background-color: #0069D9;
+}
+
+
+
+
+.completionRate {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #4caf50;
+    margin-top: 1rem;
+}
+
+
+
+.progress-bar {
+        width: 100%;
+    background-color: #e0e0e0;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    height: 2.5rem;
+    margin: 1rem 0;
+    font-size: 1.3rem;
+}
+
+.progress-bar-inner {
+  height: 100%;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  line-height: 2.5rem; /* Match the height for vertical centering */
+  border-radius: 0.5rem;
+  transition: width 0.3s ease;
+}
+
+.notDone{
+    color: #ff0000
+}
+
+.check {
+    text-decoration: none;
+    color: #0069D9;
+}
+
+
+.popupFooter {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
 }
